--- a/tactic-prog-synthesis.cabal
+++ b/tactic-prog-synthesis.cabal
@@ -58,13 +58,13 @@ executable tactic-prog-synthesis
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:     AST
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0
+    build-depends:    base ^>=4.18.3.0, containers
 
     -- Directories containing source files.
     hs-source-dirs:   app
